# MagazinC-

./: .gitignore  CMakeLists.txt  main.cpp  observers.cpp  observers.h  produse.txt  produse_test.txt
Domain/: domain.cpp  domain.h
Erori/: errors.h
Lista/: iterator.h  lista.h
Repository/: repo.cpp  repo.h
Service/: service.cpp  service.h
Teste/: teste.cpp  teste.h
UI/: gui.cpp  gui.h  ui.cpp  ui.h
Undo/: undo.cpp  undo.h
Validator/: validator.cpp  validator.h
